--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,3 +1,4 @@
+<page-title></page-title>
 <div class="container">
     <div class="row justify-content-center">
       <div class="col-3">
@@ -5,8 +6,8 @@
       </div>
   
       <div class="col-3">
-        <p>No content here yet...</p>
-      </div>
+        <fav-links></fav-links> 
+            </div>
   
       <div class="col-3">
         <p>No content here yet...</p>
