--- a/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
+++ b/lesson1/exercises/src/app/fav-photos/fav-photos.component.html
@@ -1,6 +1,6 @@
 <div class="photos">
    <h3>{{photosTitle}}</h3>
-   <img src="{{image1}}" height=200px width=400px alt="Shadow figure walking across tight-rope"> 
-   <img src="https://image.shutterstock.com/image-photo/one-young-happy-african-handsome-260nw-1997531804.jpg" height=200px width=300px alt="Man smiling in neon lights">  <br>
-   <img src="https://image.shutterstock.com/shutterstock/photos/1432719419/display_1500/stock-photo-philadelphia-pa-usa-june-juneteenth-parade-philadelpiha-at-malcom-x-park-african-1432719419.jpg" height=200px width=350px alt="Woman holding flag as she walks"> 
+   <img src="{{image1}}" height=200px width=400px alt="Shadow figure walking across tight-rope"> <br>
+   <img src="{{image2}}" height=200px width=300px alt="Man smiling in neon lights">  <br>
+   <img src="{{image3}}" height=200px width=350px alt="Woman holding flag as she walks"> 
 </div>
