--- a/lesson1/exercises/src/app/chores-list/chores-list.component.css
+++ b/lesson1/exercises/src/app/chores-list/chores-list.component.css
@@ -1,7 +1,11 @@
+* {
+  
+}
+
 .chores {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: large;
-  color: orangered;
+  color: gold;
 }
 
 h3 {
