--- a/lesson1/exercises/src/app/fav-links/fav-links.component.html
+++ b/lesson1/exercises/src/app/fav-links/fav-links.component.html
@@ -1,4 +1,6 @@
-<h3>Some of my favorite things...</h3>
-<a href="{{favLinks[0]}}" target="_blank">Woah</a> <br>
-<a href="{{favLinks[1]}}" target="_blank">Dynamite</a> <br>
-<a href="{{favLinks[2]}}" target="_blank">Free Tacos?</a>
+<div>
+  <h3>Some of my favorite things...</h3>
+    <a class="link" href="{{favLinks[0]}}" target="_blank">Woah</a> <br>
+    <a class="link" href="{{favLinks[1]}}" target="_blank">Dynamite</a> <br>
+    <a class="link" href="{{favLinks[2]}}" target="_blank">Free Tacos?</a>
+</div>
