--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -1,14 +1,29 @@
 <div class="chores">
-    <h3>Chores</h3>
-    <ul>
-        <li *ngFor = 'let chore of chores'>{{chore}}</li>
-    </ul>
+  <h3>Chores</h3>
+  <p *ngIf="chores.length > finishedChores.length">WORK HARDER!</p>
+  <ul>
+    <li *ngFor="let chore of chores">{{chore}}</li>
+  </ul>
 </div>
-<hr>
+<hr />
 <div class="doneChores">
-    <h3>Done Chores</h3>
-    <ul>
-        <li *ngFor = 'let done of finishedChores'>{{done}}</li>
-    </ul>
+  <h3>Done Chores</h3>
+  <img src="{{targetImage}}" *ngIf="chores.length === 0 || finishedChores.length > chores.length + 3; else noAllowance"/>
+  <ng-template #noAllowance>
+    <p>No allowance yet.</p>
+  </ng-template>
+  <ul>
+    <li *ngFor="let done of finishedChores">{{done}}</li>
+  </ul>
+  <div class="iceCream" *ngIf="chores.length === 0 && finishedChores.length >= 4; else noIceCream">
+    <h1>Ice Cream Treat Time!</h1>
+
+    <ng-template #noIceCream>
+      <h3>How to get ice cream...</h3>
+      <ul>
+        <li>Finish all chores</li>
+        <li>You must have finished 4 or more chores total!</li>
+      </ul>
+    </ng-template>
+  </div>
 </div>
-<hr>
