--- a/lesson3/examples/src/app/skill-set/skill-set.component.css
+++ b/lesson3/examples/src/app/skill-set/skill-set.component.css
@@ -6,3 +6,15 @@ h3 {
 .skills {
    color: green;
 }
+
+.ol-style {
+   color: black;
+   text-align: center;
+   list-style-type: upper-roman;
+}
+
+.p-style {
+   color: rgb(252, 126, 147);
+   text-align: right;
+   list-style-type: disc;
+}
